welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: overloaded method value abs with alternatives:
  (x$1: Double)Double <and>
  (x$1: Float)Float <and>
  (x$1: Long)Long <and>
  (x$1: Int)Int
 cannot be applied to (Boolean)
  if (Math.abs(num%10<=2) || Math.abs(num%10>=8)) {return true} else {return false}
           ^nearTen:2: error: overloaded method value abs with alternatives:
  (x$1: Double)Double <and>
  (x$1: Float)Float <and>
  (x$1: Long)Long <and>
  (x$1: Int)Int
 cannot be applied to (Boolean)
  if (Math.abs(num%10<=2) || Math.abs(num%10>=8)) {return true} else {return false}
                                  ^